<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de Quilometros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço Por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="total_spend">SEU GASTO TOTAL SERA DE</string>
    <string name="calculate">CALCULAR</string>
    <string name="total_value">R$ 0</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>