<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/edit_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/distance"
            android:inputType="number"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/total_km"
              android:gravity="center"
              android:layout_marginBottom="32dp"/>

    <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/price_per_liter"
              android:gravity="center"
              android:layout_marginBottom="32dp"/>

    <EditText
            android:id="@+id/edit_autonomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/autonomy"
            android:inputType="number"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/kms_per_liter"
              android:gravity="center"
              android:layout_marginBottom="32dp"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/total_spend"
              android:gravity="center"
              android:textSize="20sp"
              android:layout_margin="16dp"/>
    <TextView
            android:id="@+id/text_value_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_value"
            android:gravity="center"
            android:textSize="38sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/purple_700"/>
    <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/calculate"
            android:textStyle="bold"
            android:textSize="24sp"
            android:backgroundTint="@color/teal_200"/>
</LinearLayout>